fix: fix dark mode display problem

--- a/nexmoe.css
+++ b/nexmoe.css
@@ -169,7 +169,7 @@ input[type="radio"]::before {
 	position: absolute;
 	top: -2px;
 	left: -2px;
-	background-color: #fff;
+	background-color: var(--color-bg);
 	width: 100%;
 	height: 100%;
 	border: 2px solid var(--color-primary);
@@ -181,7 +181,7 @@ input[type="radio"]:checked::before {
 	content: "\2714";
 	font-size: 16px;
 	background-color: var(--color-primary);
-	color: #fff;
+	color: var(--color-bg);
 }
 
 input[type="radio"]::before {
@@ -277,7 +277,7 @@ nav ul li a:active {
 nav ul li ul {
 	background: var(--color-bg);
 	border-radius: var(--border-radius);
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 5px rgba(100, 100, 100, 0.15);
 	height: auto;
 	padding: 1rem 0.8rem;
 	position: absolute;
